kubernetes-logging/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-grafana
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: grafana.158.160.134.242.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80

# ---
# Для тестов. Смотреть метрики из prometheus удобнее.
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: prometheus
#   namespace: observability
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   rules:
#     - host: prometheus.158.160.134.242.nip.io
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: prometheus-operated
#                 port:
#                   number: 9090
